[package]
name = "abc-latest-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
ureq = "2.6.1"
serde_json = "1.0.67"
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
